@@ -13,38 +13,67 @@
         </repository>
     </repositories>
     <dependencies>
+        
         <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>net.java.timingframework</groupId>
+            <artifactId>timingframework-swing</artifactId>
+            <version>7.3.1</version>
+        </dependency>
+        <dependency>
+        
+            <groupId>com.oracle.database.jdbc</groupId>
 
-  <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
 
-  <artifactId>ojdbc10</artifactId>
+            <version>19.13.0.0.1</version>
 
-  <version>19.13.0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6.1</version>
+        </dependency>
 
-</dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.4</version>
+        </dependency>
 
+        <dependency>
 
+            <groupId>mysql</groupId>
 
-<dependency>
+            <artifactId>mysql-connector-java</artifactId>
 
-  <groupId>mysql</groupId>
+            <version>8.0.26</version>
 
-   <artifactId>mysql-connector-java</artifactId>
-
-   <version>8.0.26</version>
-
- </dependency>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>com.mycompany.project_1.Project_1</exec.mainClass>
+        <exec.mainClass>UI.MainFrame</exec.mainClass>
     </properties>
     <name>Project_1</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
